[metadata]
name = nanitpy
version = attr: nanitpy.__version__
author = Brandon Arino
author_email = barino@mac.com
description = Python library for interacting with the Nanit baby monitor.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/barino86/nanitpy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Home Automation

[options]
packages = find:
python_requires = >=3.7
 install_requires =
     aiohttp>=3.6
     certifi>=2019.9.11
;     pubnub>=5.1.1

;[options.package_data]
;vivintpy = zjs_device_config_db.json

;[options.packages.find]
;exclude = tests

;[options.extras_require]
;test =
;    pytest
;    pytest-asyncio
;    pytest-cov
;lint =
;    black
;    isort
